--- a/Lesson3HW/2_2/2_2.css
+++ b/Lesson3HW/2_2/2_2.css
@@ -1,4 +1,4 @@
-.widgets {
+.widgets, .contact {
     background-color: #235db7;
     width: 600px;
     height: 200px;
@@ -18,9 +18,6 @@
     height: 200px;
 }
 
-
 .contact {
-    background-color: #235db7;
-    width: 600px;
     height: 600px;
 }
